--- a/.config/i3/config
+++ b/.config/i3/config
@@ -260,6 +260,6 @@ bindsym XF86AudioMicMute exec --no-startup-id amixer set Capture toggle
 exec --no-startup-id systemctl --user import-environment DISPLAY
 
 exec --no-startup-id i3-msg 'workspace 1; exec /usr/bin/firefox'
-exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/rxvt'
-exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/rxvt'
-exec --no-startup-id i3-msg 'workspace 3; exec /usr/bin/rxvt'
+exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/urxvt'
+exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/urxvt'
+exec --no-startup-id i3-msg 'workspace 3; exec /usr/bin/urxvt'
