--- a/.config/i3/config
+++ b/.config/i3/config
@@ -251,10 +251,11 @@ bindsym XF86AudioMicMute exec --no-startup-id amixer set Capture toggle
 # bindsym XF86MonBrightnessDown exec --no-startup-id sudo light -U 5
 
 # Media player control
-# bindsym XF86AudioPlay exec --no-startup-id playerctl play
-# bindsym XF86AudioPause exec --no-startup-id playerctl pause
-# bindsym XF86AudioNext exec --no-startup-id playerctl next
-# bindsym XF86AudioPrev exec --no-startup-id playerctl previous
+bindsym XF86AudioPlay exec --no-startup-id "$HOME/bin/play-pause"
+bindsym XF86AudioPause exec --no-startup-id playerctl pause
+bindsym XF86AudioStop exec --no-startup-id playerctl stop
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 # Import DISPLAY to dunst in user mode
 exec --no-startup-id systemctl --user import-environment DISPLAY
