--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -1,5 +1,5 @@
 [icons]
-name = "awesome5"
+icons = "awesome5"
 
 [icons.overrides]
 cpu = "\uf2db"
@@ -7,7 +7,7 @@ memory_mem = "\uf538"
 time = "\uf133"
 
 [theme]
-name = "nord-dark"
+theme = "nord-dark"
 
 [theme.overrides]
 idle_fg = "#d8dee9"
@@ -15,17 +15,16 @@ idle_fg = "#d8dee9"
 [[block]]
 block = "cpu"
 interval = 1
-format = "{utilization}"
+format = " $icon $barchart $utilization "
 
 [[block]]
 block = "memory"
-display_type = "memory"
-format_mem = "{mem_used}/{cached}/{mem_total_used}"
-clickable = false
+format = " $icon $mem_used.eng(w:3,u:B,p:M)$cached$mem_total_used "
 
 [[block]]
 block = "net"
-format = "{graph_down}"
+#format = "{graph_down}"
+format = " $icon $graph_down "
 interval = 1
 
 [[block]]
@@ -35,16 +34,42 @@ headphones_indicator = true
 [[block]]
 block = "time"
 interval = 5
-format = "%Y-W%V-%u"
-
-[[block]]
-block = "time"
-interval = 5
-format = "%m-%d %H:%M"
-icons_format = ""
+[block.format]
+full = " $icon $timestamp.datetime(f:'%Y-W%V-%u %m-%d %H:%M') "
 
 [[block]]
 block = "battery"
 interval = 10
-format = "{percentage} {time}"
+format = "$percentage {$time |}"
 if_command = "test -e /sys/class/power_supply/BAT0"
+
+[[block]]
+block = "dnf"
+interval = 1800
+format = " $icon $count.eng(w:1) "
+format_singular = " $icon "
+format_up_to_date = " $icon "
+critical_updates_regex = "(linux|linux-lts|linux-zen)"
+if_command = "test dnf"
+[[block.click]]
+# shows dmenu with cached available updates. Any dmenu alternative should also work.
+button = "left"
+cmd = "dnf list -q --upgrades | tail -n +2"
+
+[[block]]
+block = "apt"
+interval = 1800
+format = " $icon $count "
+format_singular = " $icon "
+format_up_to_date = " $icon "
+critical_updates_regex = "(linux|linux-lts|linux-zen)"
+[[block.click]]
+# shows dmenu with cached available updates. Any dmenu alternative should also work.
+button = "left"
+cmd = "APT_CONFIG=/tmp/i3rs-apt/apt.conf apt list --upgradable | tail -n +2"
+if_command = "test apt"
+[[block.click]]
+# Updates the block on right click
+button = "left"
+update = true
+
