--- a/.config/i3/config
+++ b/.config/i3/config
@@ -194,7 +194,7 @@ client.background       #D8DEE9
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command i3status-rs .config/i3status-rust/config.toml
+    status_command i3status-rs ~/.config/i3status-rust/config.toml
     font pango:firacode, Font Awesome 5 Free, 10
     position top
     separator_symbol ""
