--- a/.config/tmux/themes/nord-tmux/src/nord.conf
+++ b/.config/tmux/themes/nord-tmux/src/nord.conf
@@ -1,9 +1,5 @@
-# Copyright (C) 2017-present Arctic Ice Studio <development@arcticicestudio.com>
-# Copyright (C) 2017-present Sven Greb <development@svengreb.de>
-
-# Project:    Nord tmux
-# Repository: https://github.com/arcticicestudio/nord-tmux
-# License:    MIT
+# Copyright (c) 2016-present Sven Greb <development@svengreb.de>
+# This source code is licensed under the MIT license found in the license file.
 
 #+----------------+
 #+ Plugin Support +
@@ -25,17 +21,13 @@ set -g status on
 set -g status-justify left
 
 #+--- Colors ---+
-set -g status-bg black
-set -g status-fg white
-set -g status-attr none
+set -g status-style bg=black,fg=white
 
 #+-------+
 #+ Panes +
 #+-------+
-set -g pane-border-bg black
-set -g pane-border-fg black
-set -g pane-active-border-bg black
-set -g pane-active-border-fg brightblack
+set -g pane-border-style bg=default,fg=brightblack
+set -g pane-active-border-style bg=default,fg=blue
 set -g display-panes-colour black
 set -g display-panes-active-colour brightblack
 
@@ -47,7 +39,5 @@ setw -g clock-mode-colour cyan
 #+----------+
 #+ Messages +
 #+---------+
-set -g message-fg cyan
-set -g message-bg brightblack
-set -g message-command-fg cyan
-set -g message-command-bg brightblack
+set -g message-style bg=brightblack,fg=cyan
+set -g message-command-style bg=brightblack,fg=cyan
