i3status-rust: adding docker stats

--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -30,6 +30,11 @@ warning = 15.0
 format = " $icon $available "
 
 [[block]]
+block = "docker"
+interval = 2
+format = " $icon $running $total $images "
+
+[[block]]
 block = "net"
 format = " $icon $graph_down "
 interval = 1
