--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -19,7 +19,7 @@ format = " $icon $barchart $utilization "
 
 [[block]]
 block = "memory"
-format = " $icon $mem_used.eng(w:3,u:B,p:M)$cached$mem_total_used "
+format = " $icon $mem_used.eng(w:3,u:B,p:M) $cached $mem_total_used "
 
 [[block]]
 block = "disk_space"
@@ -41,7 +41,48 @@ interval = 1
 
 [[block]]
 block = "sound"
+device_kind = "source"
+
+[[block]]
+block = "sound"
 headphones_indicator = true
+
+[[block]]
+block = "taskwarrior"
+interval = 60
+format = " $icon $filter_name $count "
+format_singular = " $icon    1 "
+format_everything_done = " $icon    0 "
+warning_threshold = 10
+critical_threshold = 200
+
+# Start Taskwarrior filters
+
+[[block.filters]]
+name = "ty"
+filter = "+PENDING due:today"
+
+[[block.filters]]
+name = "tl"
+filter = "+PENDING"
+
+[[block.filters]]
+name = "hi"
+filter = "+PENDING priority:H"
+
+[[block.filters]]
+name = "md"
+filter = "+PENDING priority:M"
+
+[[block.filters]]
+name = "lw"
+filter = "+PENDING priority:L"
+
+[[block.filters]]
+name = "bl"
+filter = "+backlog"
+
+# End Taskwarrior filters
 
 [[block]]
 block = "time"
