--- a/.config/i3/config
+++ b/.config/i3/config
@@ -228,11 +228,11 @@ bindsym $mod+l exec ~/bin/lock
 # exec i3-config-wizard
 
 # Screenshots
-bindsym Print exec --no-startup-id maim "/home/$USER/Downloads/$(date +'%Y-%m-%d-%H-%M-%S').png" --format png
+bindsym Print exec --no-startup-id maim "/home/$USER/docs/screenshots/$(date +'%Y-%m-%d-%H-%M-%S').png" --format png
 bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) \
-        "/home/$USER/Downloads/$(date +'%Y-%m-%d-%H-%M-%S').png" --format png
+        "/home/$USER/docs/screenshots/$(date +'%Y-%m-%d-%H-%M-%S').png" --format png
 bindsym $mod+Shift+Print exec --no-startup-id maim --select \
-        "/home/$USER/Downloads/$(date +'%Y-%m-%d-%H-%M-%S').png"
+        "/home/$USER/docs/screenshots/$(date +'%Y-%m-%d-%H-%M-%S').png"
 
 # Volume control
 # https://unix.stackexchange.com/questions/21089/how-to-use-command-line-to-change-volume
@@ -251,7 +251,7 @@ bindsym XF86AudioMicMute exec --no-startup-id amixer set Capture toggle
 # bindsym XF86MonBrightnessDown exec --no-startup-id sudo light -U 5
 
 # Media player control
-bindsym XF86AudioPlay exec --no-startup-id "$HOME/bin/play-pause"
+bindsym XF86AudioPlay exec --no-startup-id "/usr/local/bin/play-pause"
 bindsym XF86AudioPause exec --no-startup-id playerctl pause
 bindsym XF86AudioStop exec --no-startup-id playerctl stop
 bindsym XF86AudioNext exec --no-startup-id playerctl next
