added imapfilter files

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ scripts/test_*
 .config/mutt/muttrc.local
 .imapfilter/accounts.lua
 .imapfilter/filters/*
+.imapfilter/filters
 
 # Created by https://www.toptal.com/developers/gitignore/api/vim,macos,linux,windows,homebrew
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,macos,linux,windows,homebrew
