--- a/.config/i3/config
+++ b/.config/i3/config
@@ -47,7 +47,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec "dmenu_run -i -nf '#D8DEE9' -nb '#2E3440' -sb '#D8DEE9' -sf '#2E3440' -fn 'firacode-10'
+bindsym $mod+d exec "dmenu_run -i -nf '#D8DEE9' -nb '#2E3440' -sb '#D8DEE9' -sf '#2E3440' -fn 'firacode-10'"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -194,7 +194,7 @@ client.background       #D8DEE9
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command i3status-rs ~/.config/i3status-rust/config.toml
+    status_command ~/.cargo/bin/i3status-rs ~/.config/i3status-rust/config.toml
     font pango:firacode, Font Awesome 5 Free, 10
     position top
     separator_symbol ""
@@ -214,7 +214,7 @@ bar {
 
 # scroll down and add following line to file: bindsym Mod1+l i3lock -c 000000.
 # I also tried variants such as bindsym Mod1+l exec i3lock -c 000000 and
-bindsym $mod+l exec ~/bin/lock
+bindsym $mod+l exec /usr/local/bin/lock
 
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
@@ -265,4 +265,4 @@ exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/urxvt'
 exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/urxvt'
 exec --no-startup-id i3-msg 'workspace 3; exec /usr/bin/urxvt'
 
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
