ui modifications to mpv

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,16 +1,27 @@
+
+osc=yes
+osd-bar=yes
+osd-color="#C0FFFFFF"
+osd-font="Fira Code"
+
 # Audio config
 alang=Japanese,jpn,ja,Portuguese,por,pt,
 
 # Subtitle configs
 slang=Portuguese,por,pt,English,eng,en
+
+# subtitle file extensions
 sub-auto=fuzzy
 sub-file-paths-append=srt
 sub-file-paths-append=SRT
 sub-file-paths-append=sub
 sub-file-paths-append=subs
+
+# subtitles font settings
 sub-font="Open Sans"
 sub-font-size=36
-sub-pos=80
+sub-pos=90
+sub-color="#C0FFFFFF"
 
 # Screenshot configurations
 screenshot-template="%F-%P"
