--- a/.config/i3/config
+++ b/.config/i3/config
@@ -47,7 +47,8 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec "dmenu_run -i -nf '#D8DEE9' -nb '#2E3440' -sb '#D8DEE9' -sf '#2E3440' -fn 'firacode-10'"
+# bindsym $mod+d exec "dmenu_run -i -nf '#D8DEE9' -nb '#2E3440' -sb '#D8DEE9' -sf '#2E3440' -fn 'firacode-10'"
+bindsym $mod+d exec --no-startup-id rofi -show combi -run-shell-command '{terminal} -e bash -ic "{cmd} && read"'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -261,6 +262,5 @@ bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 exec --no-startup-id systemctl --user import-environment DISPLAY
 
 exec --no-startup-id i3-msg 'workspace 1; exec /usr/bin/firefox'
-exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/urxvt'
 exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/urxvt'
 exec --no-startup-id i3-msg 'workspace 3; exec /usr/bin/urxvt'
